workloads/forgejo/kustomize/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: forgejo-http

spec:
  parentRefs:
    - name: primary-gateway
      namespace: envoy-gateway-system
      sectionName: http

  hostnames:
    - forgejo.sidewinder.lan

  rules:
    # - backendRefs:
    #     - name: forgejo-http # SVC name (internal IP:PORT).
    #       port: 3000
    #   timeouts:
    #       request: 10s
    #       backendRequest: 10s
    #   matches:
    #     - path:
    #         type: PathPrefix
    #         value: /
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
